--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ margin-top: 1rem;
   grid-template-columns: 5% 25% 5% 25% 5% 25%;
   grid-gap: 0.5em;
   margin-top: 2rem;
+  margin-left: 5rem;
 
 }
 
@@ -215,6 +216,7 @@ content-text-holder
 
 form {
   border: solid 1px black;
+  border-radius: 15px;
   display: flex;
   flex-direction: column;
   margin: 1rem 10rem 4rem;
